--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 		 	Generation: <text id="generation"> 0 </text> </br>
 			<hr/>
 
-		 	<button onclick="Pause()"> Pause </button> 
+		 	<button onclick="Pause()"> Start/Pause </button> 
 		 	<button onclick="Next_Step()"> Next Step </button>
 		 	<button onclick="Clean()"> Clean </button> <hr/> 
 			
